# parity-wasm

./: .travis.yml  Cargo.toml  README.md
examples/: bench-decoder.rs  build.rs  data.rs  exports.rs  inject.rs  show.rs
fuzz/fuzz_targets/: deserialize.rs
spec/: Cargo.toml
spec/src/: lib.rs  run.rs
src/builder/: module.rs
src/elements/: mod.rs
tetsy-wasm/: Cargo.toml  README.md
tetsy-wasm/examples/: info.rs  roundtrip.rs
tetsy-wasm/fuzz/: Cargo.toml
tetsy-wasm/spec/: Cargo.toml
