[package]
name = "tetsy-wasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/tetcoin/tetsy-wasm"
homepage = "https://github.com/tetcoin/tetsy-wasm"
description = "tetsy-wasm testsuite"

[dependencies]
wabt = "0.2"
tetsy-wasm = { path = ".." }
